# doc-spelling-lsp

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  TODO  Taskfile.yml  test.rs
embedded-language-tool/: Cargo.toml
embedded-language-tool/src/: lib.rs
home/.config/helix/: languages.toml
src/: config.rs  diagnostic.rs  lsp.rs  main.rs  parsing.rs  state.rs
src/parsing/: config.rs
test-files/: test.rs  test.typ
