[workspace]

[package]
name = "doc-spelling-lsp"
version = "0.1.0"
edition = "2021"
categories = []
description = ""
keywords = []
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/ModProg/doc-spelling-lsp"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
crossbeam-channel = "0.5.11"
directories = "5.0.1"
intentional = "0.1.1"
# languagetool-rust = "2.1.4"
languagetool-rust.git = "https://github.com/ModProg/languagetool-rust"
languagetool-rust.branch = "derive-hash"
# tower-lsp.git = "https://github.com/ModProg/tower-lsp/"
# tower-lsp.branch = "custom-message-builder-like"
tower-lsp.path = "../tower-lsp"
portpicker = "0.1.1"
rust-embed = "8.2.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
smart-default = "0.7.1"
thiserror = "1.0.57"
trace = "0.1.7"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "io-std"] }
extend = "1.2.0"
ra-ap-rustc_lexer = "0.38.0"
non-exhaustive = "0.1.0"
pulldown-cmark = "0.10.0"
markdown = "1.0.0-alpha.16"
embedded-language-tool.path = "embedded-language-tool"
log = "0.4.21"
env_logger = "0.11.2"
derive_more = { version = "1.0.0-beta.6", features = ["display", "from_str"] }
futures = "0.3.30"
cached = { version = "0.49.2", features = ["async"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = '## \[Unreleased\]'
replace = """
<!-- ## [Unreleased] -->
## [{{version}}] - {{date}}\
"""
[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = '\[unreleased\]: (.*)/(v.*)\.\.\.HEAD'
replace = """
[unreleased]: $1/{{tag_name}}...HEAD
[{{version}}]: $1/$2...{{tag_name}}\
"""
